typescript/checker/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration14.ts.stderr
error: TS2391 {
    span: Span {
        lo: BytePos(
            13,
        ),
        hi: BytePos(
            16,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration14.ts:2:4
  |
2 |    foo();
  |    ^^^

error: TS2391 {
    span: Span {
        lo: BytePos(
            23,
        ),
        hi: BytePos(
            34,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration14.ts:3:4
  |
3 |    constructor();
  |    ^^^^^^^^^^^

